# notion-sdk-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: notion.hpp
src/: api_entrypoints.cpp  api_entrypoints.hpp  async_api_entrypoints.cpp  async_api_entrypoints.hpp  client.cpp  client.hpp  lib.cpp
test/: prelude.cpp  requesting.cpp  tutorial.cpp
